[#2650652] fix agov_base footer top spacing

--- a/agov/themes/agov/agov_base/sass/components/footer-top/footer-top.scss
+++ b/agov/themes/agov/agov_base/sass/components/footer-top/footer-top.scss
@@ -15,6 +15,8 @@
 .footer-top,
 %footer-top {
   @include clearfix;
+  @include margin-top(2);
+  @include padding-bottom(1.5);
 
   &__menu {
     @include margin-top(1);
